--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/server": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.2",
     "@types/node": "20.0.0",
     "@types/react": "18.2.5",
     "@types/react-dom": "18.2.3",
@@ -22,6 +26,7 @@
     "react-dom": "18.2.0",
     "react-router-dom": "^6.11.1",
     "tailwindcss": "3.3.2",
+    "tailwindcss-animatecss": "^3.0.4",
     "typescript": "5.0.4"
   }
 }
