--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.2",
     "@types/node": "20.0.0",
-    "@types/react": "18.2.5",
-    "@types/react-dom": "18.2.3",
+    "@types/react": "^18.2.7",
+    "@types/react-dom": "^18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "eslint": "8.39.0",
@@ -23,8 +23,8 @@
     "next": "13.4.0",
     "next-themes": "^0.2.1",
     "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "tailwindcss": "3.3.2",
     "tailwindcss-animatecss": "^3.0.4",
