--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "tailwindcss": "3.3.2",
     "tailwindcss-animatecss": "^3.0.4",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "sass": "^1.62.1"
   }
 }
