--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "next build && next export && aws s3 sync out/ s3://game.twimp.app --delete"
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
