--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.14.12",
+    "@react-google-maps/api": "^2.19.2",
     "@types/node": "20.0.0",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
