--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "concurrently \"next dev\" \"npm run storybook\"",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "next build && next export && aws s3 sync out/ s3://game.twimp.app --delete"
+    "deploy": "next build && next export && aws s3 sync out/ s3://game.twimp.app --delete",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -34,6 +36,17 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "sass": "^1.62.1"
+    "@storybook/addon-essentials": "^7.5.1",
+    "@storybook/addon-interactions": "^7.5.1",
+    "@storybook/addon-links": "^7.5.1",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/blocks": "^7.5.1",
+    "@storybook/nextjs": "^7.5.1",
+    "@storybook/react": "^7.5.1",
+    "@storybook/testing-library": "^0.2.2",
+    "concurrently": "^8.2.2",
+    "eslint-plugin-storybook": "^0.6.15",
+    "sass": "^1.62.1",
+    "storybook": "^7.5.1"
   }
 }
