--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@storybook/addon-interactions": "^7.5.1",
     "@storybook/addon-links": "^7.5.1",
     "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/addon-queryparams": "^6.2.9",
     "@storybook/blocks": "^7.5.1",
     "@storybook/nextjs": "^7.5.1",
     "@storybook/react": "^7.5.1",
