--- a/package.json
+++ b/package.json
@@ -37,20 +37,24 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.5.1",
-    "@storybook/addon-interactions": "^7.5.1",
-    "@storybook/addon-links": "^7.5.1",
+    "@storybook/addon-essentials": "^7.5.3",
+    "@storybook/addon-interactions": "^7.5.3",
+    "@storybook/addon-links": "^7.5.3",
     "@storybook/addon-onboarding": "^1.0.8",
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/addon-queryparams": "^6.2.9",
-    "@storybook/blocks": "^7.5.1",
-    "@storybook/nextjs": "^7.5.1",
-    "@storybook/react": "^7.5.1",
+    "@storybook/blocks": "^7.5.3",
+    "@storybook/nextjs": "^7.5.3",
+    "@storybook/react": "^7.5.3",
     "@storybook/testing-library": "^0.2.2",
     "concurrently": "^8.2.2",
     "eslint-plugin-storybook": "^0.6.15",
     "sass": "^1.62.1",
-    "storybook": "^7.5.1",
+    "storybook": "^7.5.3",
     "tsconfig-paths-webpack-plugin": "^4.1.0"
+  },
+  "overrides": {
+    "react": "$react",
+    "react-dom": "$react-dom"
   }
 }
