--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,7 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"],
-      "@types/*": ["src/types/*"]
+      "@/*": ["src/*"]
     },
     "plugins": [
       {
