--- a/package.json
+++ b/package.json
@@ -43,14 +43,18 @@
     "@storybook/addon-onboarding": "^1.0.8",
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/addon-queryparams": "^6.2.9",
+    "@storybook/addon-styling-webpack": "^0.0.5",
     "@storybook/blocks": "^7.5.3",
     "@storybook/nextjs": "^7.5.3",
     "@storybook/react": "^7.5.3",
     "@storybook/testing-library": "^0.2.2",
     "concurrently": "^8.2.2",
+    "css-loader": "^6.8.1",
     "eslint-plugin-storybook": "^0.6.15",
+    "postcss-loader": "^7.3.3",
     "sass": "^1.62.1",
     "storybook": "^7.5.3",
+    "style-loader": "^3.3.3",
     "tsconfig-paths-webpack-plugin": "^4.1.0"
   },
   "overrides": {
