--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "axios": "^1.4.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.4.0",
+    "github-markdown-css": "^5.4.0",
     "next": "13.4.0",
     "next-themes": "^0.2.1",
     "postcss": "8.4.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.11.1",
+    "remark-gfm": "^4.0.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animatecss": "^3.0.4",
     "typescript": "5.0.4"
