--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.14.12",
     "@react-google-maps/api": "^2.19.2",
+    "@sentry/nextjs": "^7.102.0",
     "@types/node": "20.0.0",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
