--- a/package.json
+++ b/package.json
@@ -38,7 +38,10 @@
     "remark-gfm": "^4.0.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animatecss": "^3.0.4",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "lucide-react": "^0.344.0",
+    "leaflet": "^1.9.4",
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.5.3",
@@ -59,7 +62,8 @@
     "sass": "^1.62.1",
     "storybook": "^7.5.3",
     "style-loader": "^3.3.3",
-    "tsconfig-paths-webpack-plugin": "^4.1.0"
+    "tsconfig-paths-webpack-plugin": "^4.1.0",
+    "@types/leaflet": "^1.9.8"
   },
   "overrides": {
     "react": "$react",
