--- a/package.json
+++ b/package.json
@@ -28,20 +28,20 @@
     "eslint": "8.39.0",
     "eslint-config-next": "13.4.0",
     "github-markdown-css": "^5.4.0",
+    "leaflet": "^1.9.4",
+    "lucide-react": "^0.344.0",
     "next": "13.4.0",
     "next-themes": "^0.2.1",
     "postcss": "8.4.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.11.1",
     "remark-gfm": "^4.0.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animatecss": "^3.0.4",
-    "typescript": "5.0.4",
-    "lucide-react": "^0.344.0",
-    "leaflet": "^1.9.4",
-    "react-leaflet": "^4.2.1"
+    "typescript": "5.0.4"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.5.3",
@@ -55,6 +55,7 @@
     "@storybook/nextjs": "^7.5.3",
     "@storybook/react": "^7.5.3",
     "@storybook/testing-library": "^0.2.2",
+    "@types/leaflet": "^1.9.8",
     "concurrently": "^8.2.2",
     "css-loader": "^6.8.1",
     "eslint-plugin-storybook": "^0.6.15",
@@ -62,8 +63,7 @@
     "sass": "^1.62.1",
     "storybook": "^7.5.3",
     "style-loader": "^3.3.3",
-    "tsconfig-paths-webpack-plugin": "^4.1.0",
-    "@types/leaflet": "^1.9.8"
+    "tsconfig-paths-webpack-plugin": "^4.1.0"
   },
   "overrides": {
     "react": "$react",
